fix bottom margin on mobile

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -234,10 +234,8 @@ $content-opacity: .9;
 
 /* footer */
 
-@include media-breakpoint-up(lg) {
-    .row.mainfooter {
-        margin-bottom: 40px;
-    }
+.row.mainfooter {
+    margin-bottom: 40px;
 }
 
 .row.mainfooter .col-12 {
